app.json update og node moduler

--- a/app.json
+++ b/app.json
@@ -26,6 +26,6 @@
     "ios": {
       "supportsTablet": true
     },
-    "description": "Tomasok eksempel App der demonstrerer simple GeoFencing funktionalitet  PINT2019."
+    "description": "Kalmar Union Eksamen PINT2019."
   }
 }
